# RAG_mlops25

rag/: README.md  pyproject.toml
rag/src/rag/: docker-compose.yaml
rag/src/rag/backend/: agents.py  api.py  constants.py  data_models.py  pyproject.toml
rag/src/rag/data/: crabs.txt  fisk.txt  kanin.txt  panda.txt  tiger.txt
rag/src/rag/dockerfiles/: backend.dockerfile  frontend.dockerfile
rag/src/rag/explorations/: exploration_knowledge_base.ipynb
rag/src/rag/frontend/: app.py
rag/src/rag/knowledge_base/articles.lance/_transactions/: 0-a71a3739-1a7b-462f-9a4c-3319463016e2.txn  0-d67b10f3-af54-4bcb-83f5-6e5f8043a247.txn  1-2152816b-33f8-4d20-9303-0f1a304f2714.txn  1-4957c748-b52b-4611-be94-0509c5cce13f.txn  10-35a6428f-9c0f-4527-9c47-e4b924fd7b1a.txn  10-4ffb9450-d5ed-49ec-8060-4313d421dea5.txn  11-469e0f46-a57a-4baa-a47e-401b43ea34e6.txn  11-5a4a70fe-cb4a-411a-8edf-e9f8b5a724e9.txn  12-5fd94bef-0178-41b6-82eb-cf877f3ec53e.txn  13-66116f97-e56c-4a0d-b47a-6b500c19d3a5.txn  2-2464e4c4-e342-46eb-a845-2b703c1d972d.txn  2-c2dafa2f-351f-4dae-82a8-3e6666891a45.txn  3-1a45c9a1-b5c5-41dd-ba02-5334b9e078a0.txn  3-98e7abe7-0c6e-45cb-b33a-00561a5d6026.txn  4-97cca17b-9055-4385-ac51-36cf6b57fbfe.txn  4-eb51249f-7bfb-4cc8-be98-a53b02010f08.txn  5-30038aba-8010-4f5b-9e3c-9d6e096333a6.txn  5-821943cc-d43c-4cc8-be7d-aecdd58f6dd4.txn  6-7479b1b9-4b93-48dd-892f-b1a9d306b906.txn  6-a644b7de-5264-4bcb-97b3-8c61d7733c4c.txn  7-21538174-0daa-4ac5-b465-bdde4d89e7c0.txn  7-3ea731a5-f55d-44d1-a72e-85c1f06ff26d.txn  (+4 more)
rag/src/rag/setup/: ingestion.py
(+11 files in other folders)
