[project]
name="backend"
version="0.1.0"
description = "backend for ragnimals project"
requires-python = ">=3.13"
dependencies = ["lancedb", "pydantic-ai", "fastapi", "uvicorn"]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["agents", "apy", "constants", "data_models"]